CustomObjects/objects/invoiceit_s__Revenue_Recognition_Schedule__c.object
<CustomObject>
    <description>This object holds the revenue schedules related to manual revenue recognition rules</description>
    <fields>
        <fullName>invoiceit_s__Month__c</fullName>
        <inlineHelpText>If the Revenue Recognition Rule date is Service Start Date, and the month # value is 1, then the the first revenue % will be recognized in the same month as the service start date. If the value is 2, then this will be recognized the next month and so on.</inlineHelpText>
        <label>Month #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Percent__c</fullName>
        <label>Revenue %</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Recognition_Rule__c</fullName>
        <label>Revenue Recognition Rule</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Revenue Recognition Schedules can be created only for Manual Recognition rules</errorMessage>
            <filterItems>
                <field>invoiceit_s__Revenue_Recognition_Rule__c.invoiceit_s__Recognition_Type__c</field>
                <operation>equals</operation>
                <value>Manual Recognition</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>invoiceit_s__Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Revenue Recognition Schedules</relationshipLabel>
        <relationshipName>Revenue_Recognition_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Schedule_for_Sorting__c</fullName>
        <formula>VALUE(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule # for Sorting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Revenue Recognition Schedule</label>
    <nameField>
        <label>Schedule #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Recognition Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Schedule_Date_or_Month_validation</fullName>
        <active>true</active>
        <description>Either schedule date or Month can be entered</description>
        <errorConditionFormula>AND(Not(IsBlank(invoiceit_s__Month__c)),Not(IsBlank( invoiceit_s__Schedule_Date__c)))</errorConditionFormula>
        <errorMessage>Please enter either Month or Schedule Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Schedule_Name_can_only_be_numeric</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNUMBER(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The Schedule # field can only be numeric. Use values 1,2,3 etc</errorMessage>
    </validationRules>
</CustomObject>